# native-obfuscator

./: .classpath  .gitattributes  .gitignore  .project  README.md
src/by/radioegor146/: Main.java  NativeObfuscator.java
src/sources/android/: CMakeLists.txt  native_jvm_output.cpp
